task-4-fluxcd/infrastructure/base/washere/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: washere
spec:
  ports:
    - name: webserver
      appProtocol: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
  selector: {} # kustomize!
