task-4-fluxcd/infrastructure/base/washere/k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: washere
spec:
  rules:
    - host: "" # kustomize!
      http:
        paths:
          - backend:
              service:
                name: washere
                port:
                  number: 8080
            path: /
            pathType: Prefix
